--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -1,3 +1,11 @@
-<div class="container">
-
+<div class="container-fluid">
+  <div class="row">
+    <div class="col bg-dark text-white">
+      <a class="navbar-brand">SPORTS STORE</a>
+    </div>
+  </div>
+  <div class="row text-white">
+    <div class="col-3 bg-info p-2">{{categories.length}} Categorías</div>
+    <div class="col-9 bg-success p-2">{{products.length}} Productos</div>
+  </div>
 </div>
