--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -13,7 +13,7 @@
   -->
 
   <div class="row">
-    <div class="col-3 bg-info p-2 text-white">{{categories.length}} Categorías</div>
+    <div class="col-3 bg-info p-2 text-white">Actualmente tenemos {{categories.length}} Categorías</div>
     <div class="col-9 p-2">
       <div *ngFor="let product of products" class="card m-1 p-1 bg-light">
         <h4>
@@ -22,6 +22,11 @@
             {{product.price | currency:"USD":"symbol":"2.2-2"}}
           </span>
         </h4>
+
+        <!-- <span class="badge badge-pill badge-primary float-left">
+            {{product.price | agregarImpuesto:(20)}}
+          </span> -->
+
         <div class="card-text bg-white p-1">{{product.description}}</div>
       </div>
     </div>
