--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -24,7 +24,7 @@
         </h4>
 
         <!-- <span class="badge badge-pill badge-primary float-left">
-            {{product.price | agregarImpuesto:(20)}}
+            {{product.price | agregarImpuesto:(20)}} recibe 20, si no coge el valor default
           </span> -->
 
         <div class="card-text bg-white p-1">{{product.description}}</div>
