--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -12,6 +12,8 @@
   </div>
   -->
 
+  {{products | json}}
+
   <div class="row">
     <div class="col-3 bg-info p-2 text-white">Actualmente tenemos {{categories.length}} Categorías</div>
     <div class="col-9 p-2">
