--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -12,7 +12,7 @@
   </div>
   -->
 
-  {{products | json}}
+  <!-- {{products | json}} -->
 
   <div class="row">
     <div class="col-3 bg-info p-2 text-white">Actualmente tenemos {{categories.length}} Categorías</div>
