--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -11,26 +11,36 @@
     <div class="col-9 bg-success p-2">{{products.length}} Productos</div>
   </div>
   -->
-
   <!-- {{products | json}} -->
 
   <div class="row">
-    <div class="col-3 bg-info p-2 text-white">Actualmente tenemos {{categories.length}} Categorías</div>
+    <div class="col-3 p-2">
+      <button class="btn btn-block btn-outline-primary" (click)="changeCategory()">HOME</button>
+      <button *ngFor="let cat of categories" class="btn btn-block btn-outline-primary"
+        [class.active]="cat==selectedCategory" (click)="changeCategory(cat)">{{cat}}</button>
+    </div>
     <div class="col-9 p-2">
-      <div *ngFor="let product of products" class="card m-1 p-1 bg-light">
-        <h4>
-          {{product.name}}
-          <span class="badge badge-pill badge-primary float-right">
-            {{product.price | currency:"USD":"symbol":"2.2-2"}}
-          </span>
-        </h4>
+      <div>
+        <div *ngFor="let product of products" class="card m-1 p-1 bg-light">
 
-        <!-- <span class="badge badge-pill badge-primary float-left">
-            {{product.price | agregarImpuesto:(20)}} recibe 20, si no coge el valor default
-          </span> -->
+          <h4>
+            {{product.name}}
+            <span class="badge badge-pill badge-primary float-right">
+              {{product.price | currency:"USD":"symbol":"2.2-2"}}
+            </span>
+          </h4>
 
-        <div class="card-text bg-white p-1">{{product.description}}</div>
+          <!-- <span class="badge badge-pill badge-primary float-left">
+              {{product.price | agregarImpuesto:(20)}} recibe 20, si no coge el valor default
+            </span> -->
+
+          <div class="card-text bg-white p-1">{{product.description}}</div>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- <div class="row">
+  <div class="col-3 bg-info p-2 text-white">Actualmente tenemos {{categories.length}} Categorías -->
+
 </section>
