files for cart and style

--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -3,6 +3,7 @@
     <div class="col bg-dark text-white text-center fw-bold">
       <h2 class="navbar-brand p-2 mt-1">SPORTS STORE</h2>
     </div>
+    <i class="fa-solid fa-cart-shopping"></i>
   </div>
 
   <!--
