--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col bg-dark text-white text-center fw-bold">
       <h2 class="navbar-brand p-2 mt-1">SPORTS STORE</h2>
+      <cart-summary></cart-summary>
     </div>
-    <i class="fa-solid fa-cart-shopping"></i>
   </div>
 
   <!--
@@ -19,10 +19,10 @@
       <button *ngFor="let cat of categories" class="btn btn-block btn-warning" [class.active]="cat==selectedCategory"
         (click)="changeCategory(cat)">{{cat}}</button>
     </div>
-    <div class="col-9 p-2">
+    <div class="col-9 p-2 min-h-100">
       <div>
         <div *ngFor="let product of products" class="card m-1 p-1 bg-secondary mb-3">
-          <h4 class="text-white">
+          <h4 class="text-white ml-2">
             {{product.name}}
             <span class="badge badge-pill badge-info float-right">
               {{product.price | currency:"USD":"symbol":"2.2-2"}}
@@ -33,7 +33,9 @@
               {{product.price | agregarImpuesto:(20)}} recibe 20, si no coge el valor default
             </span> -->
 
-          <div class="card-text bg-white p-1">{{product.description}}</div>
+          <div class="card-text bg-white p-1">{{product.description}}
+            <button class="btn btn-success float-right m-3" (click)="addToCart(product)">Add to cart</button>
+          </div>
         </div>
       </div>
 
