--- a/src/store/cartSummary.component.html
+++ b/src/store/cartSummary.component.html
@@ -7,7 +7,8 @@
     </span>
     <span *ngIf="cart.itemCount == 0">Nada</span>
   </small>
-  <button class="btn btn-sm bg-dark text-white" [disabled]="cart.itemCount == 0">
+  <button class="btn btn-sm bg-dark text-white" [disabled]="cart.itemCount == 0" routerLink="/cart"
+    routerLinkActive="router-link-active">
     <i class="fa fa-shopping-cart"></i>
   </button>
 </div>
