--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -20,10 +20,10 @@
         (click)="changeCategory(cat)">{{cat}}</button>
     </div>
     <div class="col-9 p-2">
-      <div *ngFor="let product of products" class="card m-1 p-1 bg-secondary mb-3">
-        <h4 class="text-white m-3">
+      <div *ngFor="let product of products" class="card m-1 bg-secondary mb-3">
+        <h4 class="text-white m-3 align-middle">
           {{product.name}}
-          <span class="badge badge-pill badge-info float-right m-3">
+          <span class="badge badge-pill badge-info float-right mr-3">
             {{product.price | currency:"USD":"symbol":"2.2-2"}}
           </span>
         </h4>
