cart details and checkout

--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg-light">
   <div class="row sticky-top">
     <div class="col bg-dark text-white">
-      <h2 class="navbar-brand p-2 mt-1 fw-bold fs-6">SPORTS STORE</h2>
+      <a class="navbar-brand p-2 mt-1 fw-bold fs-6">SPORTS STORE</a>
       <cart-summary></cart-summary>
     </div>
   </div>
