order model created

--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg-light">
-  <div class="row sticky-top">
-    <div class="col bg-dark text-white">
-      <a class="navbar-brand p-2 mt-1 fw-bold fs-6">SPORTS STORE</a>
+  <div class="row sticky-top bg-dark text-white">
+    <a class="navbar-brand p-2 mt-1 fw-bold fs-6">SPORTS STORE</a>
+    <div class="d-flex justify-content-around align-items-center col bg-dark">
       <cart-summary></cart-summary>
     </div>
   </div>
