filled checkout and styling

--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -13,10 +13,10 @@
 <!-- {{products | json}} -->
 
 <div class="row">
-  <div class="col-3 p-2 bg-info d-flex justify-content-center align-items-center">
-    <button class="btn btn-warning" (click)="changeCategory()">HOME</button>
-    <button *ngFor="let cat of categories" class="btn btn-warning btn-sm" [class.active]="cat==selectedCategory"
-      (click)="changeCategory(cat)">{{cat}}</button>
+  <div class="col-3 p-2 bg-info">
+    <button class="btn btn-block btn-warning mt-1" (click)="changeCategory()">HOME</button>
+    <button *ngFor="let cat of categories" class="btn btn-block btn-warning btn-sm"
+      [class.active]="cat==selectedCategory" (click)="changeCategory(cat)">{{cat}}</button>
   </div>
   <div class="col-9 p-2">
     <div *ngFor="let product of products" class="card m-1 bg-secondary mb-3">
