--- a/src/store/cartDetail.component.html
+++ b/src/store/cartDetail.component.html
@@ -1,46 +1,45 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col bg-dark text-white">
-      <a class="navbar-brand p-2 mt-1 fw-bold fs-6">SPORTS STORE</a>
-    </div>
+<div class="container-fluid bg-light">
+  <div class="row sticky-top bg-dark text-white d-flex justify-content-between align-items-center">
+    <a class="navbar-brand p-2">SPORTS STORE</a>
+    <cart-summary></cart-summary>
   </div>
-  <div class="row">
-    <div class="col mt-2">
-      <h2 class="text-center">Shopping Cart</h2>
-    </div>
-    <table class="table table-bordered table-stripped m-3">
-      <thead>
-        <tr>
-          <th class="text-center">Quantity</th>
-          <th class="text-center">Product</th>
-          <th class="text-center">Price</th>
-          <th class="text-center">Subtotal</th>
-        </tr>
-      </thead>
-      <tbody class="text-center">
-        <tr *ngFor="let line of cart.lines">
-          <td><input type="number" class="form-control-sm w-25 text-center" [value]="line.quantity"
-              (change)="cart.updateQuantity(line.product, $event.target.value)"></td>
-          <td>{{line.product.name}}</td>
-          <td class="text-center">{{line.product.price | currency:"USD":"symbol":"2.2-2"}}</td>
-          <td class="text-center">{{line.lineTotal | currency:"USD":"symbol":"2.2-2"}}</td>
-          <td class="text-center">
-            <button class="btn btn-danger" (click)="cart.removeLine(line.product.id)">Delete</button>
-          </td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <td colspan="3">Total:</td>
-          <td class="text-center">{{cart.cartPrice | currency:"USD":"symbol":"2.2-2"}}</td>
-        </tr>
-      </tfoot>
-    </table>
+</div>
+<div class="row">
+  <div class="col mt-2">
+    <h2 class="text-center">Shopping Cart</h2>
   </div>
-  <div class="row">
-    <div class="col d-flex justify-content-center">
-      <button class="btn btn-warning m-1" routerLink="/store">Keep Shopping</button>
-      <button class="btn btn-success m-1" routerLink="/checkout" [disabled]="cart.lines.length==0">Check Out</button>
-    </div>
+  <table class="table table-bordered table-stripped m-3">
+    <thead>
+      <tr>
+        <th class="text-center">Quantity</th>
+        <th class="text-center">Product</th>
+        <th class="text-center">Price</th>
+        <th class="text-center">Subtotal</th>
+      </tr>
+    </thead>
+    <tbody class="text-center">
+      <tr *ngFor="let line of cart.lines">
+        <td><input type="number" class="form-control-sm w-25 text-center" [value]="line.quantity"
+            (change)="cart.updateQuantity(line.product, $event.target.value)"></td>
+        <td>{{line.product.name}}</td>
+        <td class="text-center">{{line.product.price | currency:"USD":"symbol":"2.2-2"}}</td>
+        <td class="text-center">{{line.lineTotal | currency:"USD":"symbol":"2.2-2"}}</td>
+        <td class="text-center">
+          <button class="btn btn-danger" (click)="cart.removeLine(line.product.id)">Delete</button>
+        </td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="3">Total:</td>
+        <td class="text-center">{{cart.cartPrice | currency:"USD":"symbol":"2.2-2"}}</td>
+      </tr>
+    </tfoot>
+  </table>
+</div>
+<div class="row">
+  <div class="col d-flex justify-content-center">
+    <button class="btn btn-warning m-1" routerLink="/store">Keep Shopping</button>
+    <button class="btn btn-success m-1" routerLink="/checkout" [disabled]="cart.lines.length==0">Check Out</button>
   </div>
 </div>
