filled checkout and styling*

--- a/src/store/cartDetail.component.html
+++ b/src/store/cartDetail.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid bg-light">
   <div class="row sticky-top bg-dark text-white d-flex justify-content-between align-items-center">
-    <a class="navbar-brand p-2">SPORTS STORE</a>
+    <a class="navbar-brand sticky-top p-2">SPORTS STORE</a>
     <cart-summary></cart-summary>
   </div>
 </div>
-<div class="row">
+<div class="row m-3">
   <div class="col mt-2">
     <h2 class="text-center">Shopping Cart</h2>
   </div>
-  <table class="table table-bordered table-stripped m-3">
+  <table class="table table-bordered table-striped m-3">
     <thead>
       <tr>
         <th class="text-center">Quantity</th>
