--- a/src/store/checkout.component.html
+++ b/src/store/checkout.component.html
@@ -4,15 +4,16 @@
     <cart-summary></cart-summary>
   </div>
 </div>
-<div *ngIf="orderSent" class="m-2 text-center">
+<div *ngIf="orderSent" class="m-3 text-center border border-blue">
   <h2>Thank you!</h2>
   <p>Your order will be shipped soon!</p>
-  <button class="btn-btn-primary" routerLink="/store">Home</button>
+  <button class="btn btn-success" routerLink="/store">Home</button>
 </div>
 <form *ngIf="!orderSent" #form="ngForm" novalidate (ngSubmit)="submitOrder(form)" class="m-2">
   <div class="form-group">
     <label>Name</label>
-    <input class="form-control" #name="ngModel" name="name" [(ngModel)]="order.name" required>
+    <input class="form-control" #name="ngModel" name="name" [(ngModel)]="order.name" required minlength="4"
+      pattern="^[a-zA-Z]+$">
     <span *ngIf="submitted && name.invalid" class="text-danger">Please, write your name.</span>
   </div>
   <div class="form-group">
