--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid bg-light">
-  <div class="row sticky-top bg-dark text-white d-flex justify-content-between align-items-center">
+<div class="container-fluid bg-light sticky-top">
+  <div class="row bg-dark text-white d-flex justify-content-between align-items-center">
     <a class="navbar-brand p-2">SPORTS STORE</a>
     <cart-summary></cart-summary>
   </div>
@@ -20,7 +20,7 @@
         [class.active]="cat==selectedCategory" (click)="changeCategory(cat)">{{cat}}</button>
     </div>
   </div>
-  <div class="col-9 p-2">
+  <div class="col-9 pl-1 pr-3">
     <div *ngFor="let product of products" class="card m-1 bg-secondary mb-3">
       <h4 class="text-white m-3 align-middle">
         {{product.name}}
