--- a/src/store/checkout.component.html
+++ b/src/store/checkout.component.html
@@ -18,12 +18,12 @@
   </div>
   <div class="form-group">
     <label>Address</label>
-    <input class="form-control" #name="ngModel" name="address" [(ngModel)]="order.name" required>
-    <span *ngIf="submitted && address.invalid" class="text-danger">Please, enter your address.</span>
+    <input class="form-control" #name="ngModel" name="address" [(ngModel)]="order.address" required>
+    <span *ngIf=" submitted && address.invalid" class="text-danger">Please, enter your address.</span>
   </div>
   <div class="form-group">
     <label>City</label>
-    <input class="form-control" #name="ngModel" name="city" [(ngModel)]="order.name" required>
+    <input class="form-control" #name="ngModel" name="city" [(ngModel)]="order.city" required>
     <span *ngIf="submitted && city.invalid" class="text-danger">Please, enter your city.</span>
   </div>
   <div class="form-group">
