--- a/src/store/cartDetail.component.html
+++ b/src/store/cartDetail.component.html
@@ -36,10 +36,12 @@
       </tr>
     </tfoot>
   </table>
-</div>
-<div class="row">
-  <div class="col d-flex justify-content-center">
-    <button class="btn btn-warning m-1" routerLink="/store">Keep Shopping</button>
-    <button class="btn btn-success m-1" routerLink="/checkout" [disabled]="cart.lines.length==0">Check Out</button>
+  <div class="row">
+    <div class="col d-flex">
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-warning m-1" routerLink="/store">Keep Shopping</button>
+        <button class="btn btn-success m-1" routerLink="/checkout" [disabled]="cart.lines.length==0">Check Out</button>
+      </div>
+    </div>
   </div>
 </div>
