--- a/src/store/cartDetail.component.html
+++ b/src/store/cartDetail.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid bg-light sticky-top">
   <div class="row bg-dark text-white d-flex justify-content-between align-items-center">
-    <a class="navbar-brand">SPORTS STORE</a>
+    <a class="navbar-brand" routerLink="/store">SPORTS STORE</a>
     <cart-summary></cart-summary>
   </div>
 </div>
