--- a/src/store/cartDetail.component.html
+++ b/src/store/cartDetail.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid bg-light sticky-top">
   <div class="row bg-dark text-white d-flex justify-content-between align-items-center">
-    <a class="navbar-brand" routerLink="/store">SPORTS STORE</a>
+    <a class="navbar-brand p-2 text-white link-light" routerLink="/store">SPORTS STORE</a>
     <cart-summary></cart-summary>
   </div>
 </div>
-<div class="row m-3">
+<div class="row m-3 d-flex justify-content-center">
   <div class="col mt-2">
     <h2 class="text-center">Shopping Cart</h2>
   </div>
