--- a/src/store/checkout.component.html
+++ b/src/store/checkout.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid bg-light sticky-top">
   <div class="row bg-dark text-white d-flex justify-content-between align-items-center">
-    <a class="navbar-brand p-2" routerLink="/store">SPORTS STORE</a>
+    <a class="navbar-brand p-2 text-white link-light" routerLink="/store">SPORTS STORE</a>
     <cart-summary></cart-summary>
   </div>
 </div>
@@ -12,37 +12,47 @@
 <form *ngIf="!orderSent" #form="ngForm" novalidate (ngSubmit)="submitOrder(form)" class="m-3">
   <div class="form-group mt-2">
     <label>Name</label>
-    <input class="form-control" #name="ngModel" name="name" [(ngModel)]="order.name" required minlength="4"
-      pattern="^[a-zA-Z]+$">
-    <span *ngIf="submitted && name.invalid" class="text-danger">Please, write your name.</span>
+    <input type="text" placeholder="Andrea" class="form-control" #name="ngModel" name="name" [(ngModel)]="order.name"
+      required minlength="4" pattern="^[a-zA-Z]+$">
+    <ul class="text-danger list-unstyled" *ngIf="name.dirty && name.invalid">
+      <li *ngIf="name.errors.required">Por favor tipee su nombre.</li>
+      <li *ngIf="name.errors.pattern">Por favor tipee su nombre con letras y espacios.</li>
+      <li *ngIf="name.errors.minlength">Por favor tipee su nombre con mas de 5 letras.</li>
+    </ul>
+
   </div>
   <div class="form-group">
     <label>Address</label>
-    <input class="form-control" #name="ngModel" name="address" [(ngModel)]="order.address" required>
+    <input type="text" placeholder="Downing St Nº10" class="form-control" #name="ngModel" name="address"
+      [(ngModel)]="order.address" required>
     <span *ngIf=" submitted && address.invalid" class="text-danger">Please, enter your address.</span>
   </div>
   <div class="form-group">
-    <label>City</label>
-    <input class="form-control" #name="ngModel" name="city" [(ngModel)]="order.city" required>
-    <span *ngIf="submitted && city.invalid" class="text-danger">Please, enter your city.</span>
-  </div>
-  <div class="form-group">
-    <label>State</label>
-    <input class="form-control" #state="ngModel" name="state" [(ngModel)]="order.state" required />
-    <span *ngIf="submitted && state.invalid" class="text-danger">
-      Please enter your state.
-    </span>
-  </div>
-  <div class="form-group">
     <label>Zip/Postal Code</label>
-    <input class="form-control" #zip="ngModel" name="zip" [(ngModel)]="order.zip" required />
+    <input type="number" placeholder="33456" class="form-control" #zip="ngModel" name="zip" [(ngModel)]="order.zip"
+      required />
     <span *ngIf="submitted && zip.invalid" class="text-danger">
       Please enter your zip/postal code.
     </span>
   </div>
   <div class="form-group">
+    <label>City</label>
+    <input type="text" placeholder="Berlin" class="form-control" #name="ngModel" name="city" [(ngModel)]="order.city"
+      required>
+    <span *ngIf="submitted && city.invalid" class="text-danger">Please, enter your city.</span>
+  </div>
+  <div class="form-group">
+    <label>State</label>
+    <input type="text" placeholder="Oklahoma" class="form-control" #state="ngModel" name="state"
+      [(ngModel)]="order.state" required />
+    <span *ngIf="submitted && state.invalid" class="text-danger">
+      Please enter your state.
+    </span>
+  </div>
+  <div class="form-group">
     <label>Country</label>
-    <input class="form-control" #country="ngModel" name="country" [(ngModel)]="order.country" required />
+    <input type="text" class="form-control" placeholder="Finland" #country="ngModel" name="country"
+      [(ngModel)]="order.country" required />
     <span *ngIf="submitted && country.invalid" class="text-danger">
       Please enter your country.
     </span>
