--- a/src/store/checkout.component.html
+++ b/src/store/checkout.component.html
@@ -15,16 +15,15 @@
     <input type="text" placeholder="Andrea" class="form-control" #name="ngModel" name="name" [(ngModel)]="order.name"
       required minlength="4" pattern="^[a-zA-Z]+$">
     <ul class="text-danger list-unstyled" *ngIf="name.dirty && name.invalid">
-      <li *ngIf="name.errors.required">Por favor tipee su nombre.</li>
-      <li *ngIf="name.errors.pattern">Por favor tipee su nombre con letras y espacios.</li>
-      <li *ngIf="name.errors.minlength">Por favor tipee su nombre con mas de 5 letras.</li>
+      <li *ngIf="name.errors.required">Please, enter your name.</li>
+      <li *ngIf="name.errors.pattern">Please, enter your name without special characters.</li>
+      <li *ngIf="name.errors.minlength">Please, enter your name with 5 or more letters.</li>
     </ul>
   </div>
   <div class="form-group">
-    <label>Address</label>
     <div class="input-group flex-nowrap">
-      <span class="input-group-text" id="addon-wrapping">@</span>
-      <input type="text" placeholder="Downing St Nº10" class="form-control" #name="ngModel" name="address"
+      <span class="input-group-text" id="addon-wrapping">Address</span>
+      <input type="text" placeholder="Downing St Nº10" class="form-control rounded" #name="ngModel" name="address"
         [(ngModel)]="order.address" required aria-describedby="addon-wrapping">
     </div>
     <span *ngIf=" submitted && address.invalid" class="text-danger">Please, enter your address.</span>
