--- a/src/store/checkout.component.css
+++ b/src/store/checkout.component.css
@@ -1,7 +1,11 @@
-input.ng-dirty.ng-invalid {
+.form-group input.ng-dirty.ng-invalid {
   border: 2px solid #ff0000
 }
 
-input.ng-dirty.ng-valid {
+.form-group.input.ng-dirty.ng-valid {
   border: 2px solid #6bc502
+}
+
+#error {
+  border: 2px solid #ff0000
 }
