--- a/src/admin/auth.component.html
+++ b/src/admin/auth.component.html
@@ -6,7 +6,31 @@
 </div>
 <div class="p-2">
   <form novalidate #form="ngForm" (ngSubmit)="authenticate(form)">
-    <input type="text">
-    <input type="text">
+    <div class="form-group">
+      <div class="form-group">
+        <div class="input-group flex-nowrap">
+          <span class="input-group-text" id="addon-wrapping">User Name</span>
+          <input type="text" class="form-control" #name="ngModel" name="username" [(ngModel)]="username" required
+            minlength="5" pattern="^[a-zA-Z]+$" aria-describedby="addon-wrapping">
+          <span *ngIf="submitted && username.invalid" class="text-danger" id="error">
+            No users found with that username.
+          </span>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="input-group flex-nowrap">
+          <span class="input-group-text" id="addon-wrapping">Password</span>
+          <input type="text" class="form-control" #name="ngModel" name="password" [(ngModel)]="password" required
+            minlength="8" aria-describedby="addon-wrapping">
+          <span *ngIf="submitted && password.invalid" class="text-danger" id="error">
+            Your password is not correct..
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <button class="btn btn-success m-3" type="submit">Login</button>
+      <button class="btn btn-danger m-3" routerLink="/">Back</button>
+    </div>
   </form>
 </div>
