--- a/src/admin/auth.component.html
+++ b/src/admin/auth.component.html
@@ -4,33 +4,29 @@
 <div **ngIf="errorMessage !=null" class="bg-danger mt-2 text-center text-white">
   {{errorMessage}}
 </div>
-<div class="p-2">
-  <form novalidate #form="ngForm" (ngSubmit)="authenticate(form)">
-    <div class="form-group">
+<div class="m-5">
+  <div class="d-flex justify-content-center">
+    <form novalidate #form="ngForm" (ngSubmit)="authenticate(form)">
       <div class="form-group">
-        <div class="input-group flex-nowrap">
-          <span class="input-group-text" id="addon-wrapping">User Name</span>
-          <input type="text" class="form-control" #name="ngModel" name="username" [(ngModel)]="username" required
-            minlength="5" pattern="^[a-zA-Z]+$" aria-describedby="addon-wrapping">
-          <span *ngIf="submitted && username.invalid" class="text-danger" id="error">
-            No users found with that username.
-          </span>
+        <div class="form-group">
+          <div class="input-group flex-nowrap">
+            <span class="input-group-text" id="addon-wrapping">User Name</span>
+            <input type="text" class="form-control rounded" #name="ngModel" name="username" [(ngModel)]="username"
+              required minlength="5" pattern="^[a-zA-Z]+$" aria-describedby="addon-wrapping">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="input-group flex-nowrap">
+            <span class="input-group-text" id="addon-wrapping">Password</span>
+            <input type="password" class="form-control rounded" #name="ngModel" name="password" [(ngModel)]="password"
+              required minlength="3" aria-describedby="addon-wrapping">
+          </div>
         </div>
       </div>
-      <div class="form-group">
-        <div class="input-group flex-nowrap">
-          <span class="input-group-text" id="addon-wrapping">Password</span>
-          <input type="text" class="form-control" #name="ngModel" name="password" [(ngModel)]="password" required
-            minlength="8" aria-describedby="addon-wrapping">
-          <span *ngIf="submitted && password.invalid" class="text-danger" id="error">
-            Your password is not correct..
-          </span>
-        </div>
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-danger m-3" routerLink="/">Back</button>
+        <button class="btn btn-success m-3" type="submit">Login</button>
       </div>
-    </div>
-    <div class="d-flex justify-content-center">
-      <button class="btn btn-success m-3" type="submit">Login</button>
-      <button class="btn btn-danger m-3" routerLink="/">Back</button>
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
