--- a/src/admin/admin.component.html
+++ b/src/admin/admin.component.html
@@ -1,3 +1,5 @@
-<div class="bg-info p-2 text-white">
-  <h3>LOREMLOREMLOREMLOERMELOERMELROERMERLEOREMRLEROERMRORE</h3>
+<div class="container-fluid bg-light sticky-top">
+  <div class="row bg-dark text-white d-flex justify-content-between align-items-center">
+    <a class="navbar-brand p-2 text-white link-light" routerLink="/store">SPORTS STORE</a>
+  </div>
 </div>
