--- a/src/admin/auth.component.html
+++ b/src/admin/auth.component.html
@@ -24,8 +24,8 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <button class="btn btn-danger m-3" routerLink="/">Back</button>
-        <button class="btn btn-success m-3" type="submit">Login</button>
+        <button class="btn btn-danger mt-3 mr-2" routerLink="/">Back</button>
+        <button class="btn btn-success mt-3 ml-2" type="submit">Login</button>
       </div>
     </form>
   </div>
