--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -28,6 +28,7 @@
             {{product.price | currency:"USD":"symbol":"2.2-2"}}
           </span>
         </h4>
+        <img src="https://loremflickr.com/1080/1024" />
 
         <!-- <span class="badge badge-pill badge-primary float-left">
           {{product.price | agregarImpuesto:(20)}} recibe 20, si no coge el valor default
