--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -33,12 +33,16 @@
           {{product.price | agregarImpuesto:(20)}} recibe 20, si no coge el valor default
         </span> -->
 
-        <div class="card-text bg-white p-3">
-          <div class="w-50 h-50">
-            <img src="https://loremflickr.com/1080/1024?random" class="img-thumbnail img-fluid" />
+        <div class="card-text bg-white p-3 d-flex justify-content-between">
+          <div class="mr-2">
+            <img src="https://loremflickr.com/1080/1024?random" class="float-left img-fluid mr-2 h-20 w-20" />
           </div>
-          {{product.description}}
-          <button class="btn btn-success float-right m-3" (click)="addToCart(product)">Add to cart</button>
+          <div>
+            {{product.description}}
+          </div>
+          <div>
+            <button class="btn btn-success float-right m-3" (click)="addToCart(product)">Add to cart</button>
+          </div>
         </div>
       </div>
 
