--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -33,9 +33,9 @@
           {{product.price | agregarImpuesto:(20)}} recibe 20, si no coge el valor default
         </span> -->
 
-        <div class="card-text bg-white p-3 d-flex justify-content-between">
-          <div class="mr-2">
-            <img src="https://loremflickr.com/1080/1024?random" class="float-left img-fluid mr-2 h-20 w-20" />
+        <div class="card-text bg-white p-3 d-flex justify-content-between h-20 w-20">
+          <div class="mr-2 border max-w-10 max-h-10">
+            <img src="https://loremflickr.com/1080/1024?random" class="float-left img-fluid mr-2 " />
           </div>
           <div>
             {{product.description}}
