--- a/src/admin/auth.component.html
+++ b/src/admin/auth.component.html
@@ -1,7 +1,7 @@
 <div class="bg-info p-2 text-center text-white">
   <h3>Admin Area</h3>
 </div>
-<div **ngIf="errorMessage !=null" class="bg-danger mt-2 text-center text-white">
+<div *ngIf="errorMessage !=null" class="bg-danger mt-2 text-center text-white">
   {{errorMessage}}
 </div>
 <div class="m-5">
@@ -24,8 +24,8 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <button class="btn btn-danger mt-3 mr-2" routerLink="/">Back</button>
-        <button class="btn btn-success mt-3 ml-2" type="submit">Login</button>
+        <button class="btn btn-success mt-3 mr-2" type="submit">Login</button>
+        <button class="btn btn-danger mt-3 ml-2" routerLink="/">Back</button>
       </div>
     </form>
   </div>
