--- a/src/store/store.component.html
+++ b/src/store/store.component.html
@@ -35,7 +35,7 @@
 
         <div class="card-text bg-white p-3 d-flex justify-content-between h-20 w-20">
           <div class="mr-2 border w-25">
-            <img src="https://loremflickr.com/1080/1024?random" class="float-left img-fluid mr-2 " />
+            <img src="https://loremflickr.com/1080/1024" class="float-left img-fluid mr-2 " />
           </div>
           <div>
             {{product.description}}
